Add tests to ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,30 @@
-name: Build and Push Docker Image
+name: Build, Test and Push Docker Image
 
 on:
   pull_request:
-    branches: [ main ]  # запускается при pull request в main
+    branches: [ main ]
 
 jobs:
-  build-and-push:
+  build-test-push:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install -r docker_requirements.txt
+        pip install pytest
+
+    - name: Run tests
+      run: pytest tests/
 
     - name: Log in to DockerHub
       uses: docker/login-action@v2
