--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 name: Deploy and Test Model Container
 
 on:
-  workflow_dispatch:  # запуск вручную
+  workflow_dispatch: 
   schedule:
-    - cron: '0 8 * * *'  # ежедневно в 8:00 UTC
+    - cron: '0 8 * * *'  # everyday at 8 A M 
 
 jobs:
   deploy-and-test:
@@ -17,25 +17,34 @@ jobs:
       run: |
         docker run -d -p 8000:8000 --name review_api ${{ secrets.DOCKERHUB_USERNAME }}/review_clf:latest
 
+    - name: Install jq
+      run: sudo apt-get update && sudo apt-get install -y jq
+
     - name: Wait and test inference endpoint
       run: |
         echo "Waiting for the API to become ready..."
         for i in {1..10}; do
           sleep 10
           echo "Attempt $i..."
+          
+          # Request to API
           RESPONSE=$(curl -s -X POST "http://localhost:8000/predict" \
             -H "Content-Type: application/json" \
             -d '{"summary": "Nice", "text": "Really good quality", "HelpfulnessNumerator": 3, "HelpfulnessDenominator": 4}' || true)
 
-
           echo "Response: $RESPONSE"
 
-          if echo "$RESPONSE" | grep -Eq '^[0-9.]+$'; then
-            echo "Inference successful"
+          # Parse answer and der pred
+          PREDICTION=$(echo "$RESPONSE" | jq -r '.prediction')
+
+          # Check if gotten value is number
+          if echo "$PREDICTION" | grep -Eq '^[0-9.]+$'; then
+            echo "Inference successful: $PREDICTION"
             exit 0
           fi
         done
 
+        # If API do not response correctly
         echo "API did not respond correctly after multiple attempts"
         echo "Showing logs from container:"
         docker logs review_api
