Add postgree database

--- a/src/config.ini
+++ b/src/config.ini
@@ -11,3 +11,10 @@ target_column = Score
 
 [inference]
 model_path = ./runs/train1/model.cbm
+
+[database]
+host = ${DB_HOST}
+port = ${DB_PORT}
+dbname = ${DB_NAME}
+user = ${DB_USER}
+password = ${DB_PASSWORD}
