--- a/requirements.txt
+++ b/requirements.txt
@@ -1,165 +1,42 @@
-aiohappyeyeballs==2.5.0
-aiohttp==3.11.13
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-amqp==5.3.1
 annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.8.0
-appdirs==1.4.4
-asttokens==3.0.0
-asyncssh==2.20.0
-atpublic==5.1
-attrs==25.1.0
-backcall==0.2.0
-beautifulsoup4==4.13.3
-billiard==4.2.1
-bleach==6.2.0
+anyio==4.9.0
 catboost==1.2.7
-celery==5.4.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
 click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
 colorama==0.4.6
-configobj==5.0.9
 contourpy==1.3.1
-cryptography==44.0.2
 cycler==0.12.1
-decorator==5.2.1
-defusedxml==0.7.1
-dictdiffer==0.9.0
-diskcache==5.6.3
-distro==1.9.0
-docopt==0.6.2
-dpath==2.2.0
-dulwich==0.22.8
-dvc==3.59.1
-dvc-data==3.16.9
-dvc-http==2.32.0
-dvc-objects==5.1.0
-dvc-render==1.0.2
-dvc-studio-client==0.21.0
-dvc-task==0.40.2
-entrypoints==0.4
-executing==2.2.0
-fastapi==0.115.11
-fastjsonschema==2.21.1
-filelock==3.17.0
-flatten-dict==0.4.2
-flufl.lock==8.1.0
+fastapi==0.115.12
 fonttools==4.56.0
-frozenlist==1.5.0
-fsspec==2025.3.0
-funcy==2.0
 gensim==4.3.3
-gitdb==4.0.12
-GitPython==3.1.44
-grandalf==0.8
 graphviz==0.20.3
-gto==1.7.2
-hydra-core==1.3.2
+h11==0.14.0
 idna==3.10
-iniconfig==2.0.0
-ipython==8.12.3
-iterative-telemetry==0.0.10
-jedi==0.19.2
-Jinja2==3.1.6
 joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-kagglehub==0.3.10
 kiwisolver==1.4.8
-kombu==5.4.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
 matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.2
-multidict==6.1.0
-narwhals==1.30.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-networkx==3.4.2
+narwhals==1.33.0
 numpy==1.26.4
-omegaconf==2.3.0
-orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.12.1
-pickleshare==0.7.5
 pillow==11.1.0
-pipreqs==0.5.0
-platformdirs==4.3.6
-plotly==6.0.0
-pluggy==1.5.0
-prompt_toolkit==3.0.50
-propcache==0.3.0
-psutil==7.0.0
-pure_eval==0.2.3
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pydot==3.0.4
-pygit2==1.17.0
-Pygments==2.19.1
-pygtrie==2.5.0
-pyparsing==3.2.1
-pytest==8.3.5
+plotly==6.0.1
+pydantic==2.11.1
+pydantic_core==2.33.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2025.1
-pywin32==309 ; sys_platform == "win32"
-PyYAML==6.0.2
-pyzmq==26.2.1
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.23.1
-ruamel.yaml==0.18.10
-ruamel.yaml.clib==0.2.12
+python-dotenv==1.0.0
+pytz==2025.2
 scikit-learn==1.6.1
 scipy==1.13.1
-scmrepo==3.3.10
-seaborn==0.13.2
-semver==3.0.4
-setuptools==76.0.0
-shellingham==1.5.4
-shortuuid==1.0.13
-shtab==1.7.1
 six==1.17.0
 smart-open==7.1.0
-smmap==5.0.2
 sniffio==1.3.1
-soupsieve==2.6
-sqltrie==0.11.2
-stack-data==0.6.3
 starlette==0.46.1
-tabulate==0.9.0
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tomlkit==0.13.2
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.15.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-vine==5.1.0
-voluptuous==0.15.2
-wcwidth==0.2.13
-webencodings==0.5.1
+threadpoolctl==3.6.0
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+uvicorn==0.34.0
 wrapt==1.17.2
-yarg==0.1.9
-yarl==1.18.3
-zc.lockfile==3.0.post1
+psycopg2-binary==2.9.9
+kagglehub==0.3.10
