--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,13 @@
 name: Build, Test and Push Docker Image
 
 on:
+  push:
+    branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # Позволяет запускать workflow вручную
+  schedule:
+    - cron: '0 0 * * 1'  # Запуск каждый понедельник в 00:00
 
 jobs:
   build-test-push:
@@ -10,7 +15,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -23,23 +28,14 @@ jobs:
         pip install -r docker_requirements.txt
         pip install pytest
 
-    - name: Run tests
+    - name: Run unit tests
       run: pytest tests/
 
     - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/review_clf .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/lab2-app:latest .
 
     - name: Push Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/review_clf
-
-    - name: Trigger CD pipeline
-      uses: peter-evans/workflow-dispatch@v1
-      with:
-        workflow: Deploy and Test Model Container
-        token: ${{ secrets.GITHUB_TOKEN }}
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/lab2-app:latest
