Add kafka and integrate it

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Deploy and Test Model Container with Vault Integration
+name: Deploy and Test Model Container with Kafka Integration
 
 on:
   workflow_dispatch:  # запуск вручную по кнопке
@@ -22,9 +22,10 @@ jobs:
         echo "DB_USER=postgres" >> .env
         echo "DB_PASSWORD=postgres" >> .env
         echo "VAULT_ADDR=http://vault:8200" >> .env
+        echo "KAFKA_BOOTSTRAP_SERVERS=kafka:9092" >> .env
 
     - name: Pull Docker image
-      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lab3-vault-app:latest
+      run: docker pull ${{ secrets.DOCKERHUB_USERNAME }}/lab4-kafka-app:latest
 
     - name: Start containers with docker compose
       run: docker compose up -d
@@ -83,27 +84,50 @@ jobs:
           exit 1
         fi
 
-        # Test 3: Prediction endpoint
-        echo "Test 3: Prediction endpoint"
+        # Test 3: Kafka status endpoint
+        echo "Test 3: Kafka status endpoint"
+        KAFKA_STATUS_RESPONSE=$(curl -s http://localhost:8000/kafka-status || echo '{"error": "Failed to connect"}')
+        echo "Kafka status response: $KAFKA_STATUS_RESPONSE"
+
+        if [[ "$KAFKA_STATUS_RESPONSE" == *"connected"*"true"* ]]; then
+          echo "Kafka status endpoint working correctly!"
+        else
+          echo "Kafka status endpoint not working correctly!"
+          docker compose logs kafka
+          exit 1
+        fi
+
+        # Test 4: Prediction endpoint
+        echo "Test 4: Prediction endpoint"
         PREDICT_RESPONSE=$(curl -s -X POST "http://localhost:8000/predict" \
           -H "Content-Type: application/json" \
           -d '{"summary": "Great product!", "text": "This product works perfectly and I love it.", "HelpfulnessNumerator": 5, "HelpfulnessDenominator": 7}')
         echo "Prediction response: $PREDICT_RESPONSE"
         PREDICTION=$(echo "$PREDICT_RESPONSE" | jq -r '.prediction')
 
-        # Test 4: Check if prediction was saved in database
-        echo "Test 4: Check if prediction was saved in database"
-        sleep 2  # Wait for the prediction to be saved
-        PREDICTIONS_RESPONSE=$(curl -s http://localhost:8000/predictions)
-        echo "Predictions response: $PREDICTIONS_RESPONSE"
-        PREDICTIONS_COUNT=$(echo "$PREDICTIONS_RESPONSE" | jq '.predictions | length')
+        # Test 5: Wait for consumer to process message
+        echo "Test 5: Wait for consumer to process message"
+        sleep 5  # Wait for the consumer to process the message
+
+        # Check logs from db-consumer to verify message was processed
+        DB_CONSUMER_LOGS=$(docker compose logs db-consumer)
+        echo "DB Consumer logs: $DB_CONSUMER_LOGS"
+
+        if [[ "$DB_CONSUMER_LOGS" == *"Successfully saved prediction to database"* ]]; then
+          echo "Message successfully processed by consumer!"
+        else
+          echo "Message not processed by consumer!"
+          docker compose logs
+          exit 1
+        fi
 
         # Check if all tests passed
         if [[ "$HEALTH_RESPONSE" == *"healthy"* ]] &&
            [ "$VAULT_CONNECTED" = "true" ] &&
            [[ "$VAULT_STATUS_RESPONSE" == *"connected"*"true"* ]] &&
+           [[ "$KAFKA_STATUS_RESPONSE" == *"connected"*"true"* ]] &&
            [ -n "$PREDICTION" ] &&
-           [ "$PREDICTIONS_COUNT" -gt 0 ]; then
+           [[ "$DB_CONSUMER_LOGS" == *"Successfully saved prediction to database"* ]]; then
           echo "All functional tests passed!"
         else
           echo "Some functional tests failed!"
