--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build, Test and Push Docker Image with Vault Integration
+name: Build, Test and Push Docker Images with Kafka Integration
 
 on:
   push:
@@ -31,8 +31,8 @@ jobs:
     - name: Log in to DockerHub
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-    - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/lab3-vault-app:latest .
+    - name: Build API Docker image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/lab4-kafka-app:latest .
 
-    - name: Push Docker image
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/lab3-vault-app:latest
+    - name: Push API Docker image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/lab4-kafka-app:latest
