--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,13 +43,64 @@ services:
       retries: 3
       start_period: 10s
 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
   app:
     build: .
     container_name: model-api
     depends_on:
+      - kafka
+      - vault
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - VAULT_ADDR=http://vault:8200
+      - VAULT_TOKEN=root
+    ports:
+      - "8000:8000"
+    command: ["python", "src/api.py"]
+    restart: on-failure
+
+  db-consumer:
+    build: .
+    container_name: db-consumer
+    depends_on:
+      - kafka
       - postgres
       - vault
     environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - DB_HOST=postgres
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
@@ -57,9 +108,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - VAULT_ADDR=http://vault:8200
       - VAULT_TOKEN=root
-    ports:
-      - "8000:8000"
-    command: ["python", "src/api.py"]
+    command: ["python", "src/db_consumer.py"]
     restart: on-failure
 
 volumes:
