--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3'
 
+networks:
+  kafka-network:
+    driver: bridge
+
 services:
   vault:
     image: hashicorp/vault:latest
@@ -18,6 +22,8 @@ services:
     cap_add:
       - IPC_LOCK
     entrypoint: sh -c "apk add --no-cache jq && /vault/start.sh"
+    networks:
+      - kafka-network
     healthcheck:
       test: ["CMD", "vault", "status"]
       interval: 10s
@@ -36,6 +42,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - kafka-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
       interval: 10s
@@ -43,39 +51,25 @@ services:
       retries: 3
       start_period: 10s
 
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
-    healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "2181"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
-
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: apache/kafka:3.9.1
     container_name: kafka
-    depends_on:
-      - zookeeper
     ports:
       - "9092:9092"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      CLUSTER_ID: "5L6g3nShT-eMCtK--X86sw"
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_NODE_ID: 1
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
+      KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "9092"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    networks:
+      - kafka-network
 
   app:
     build: .
@@ -91,6 +85,8 @@ services:
       - "8000:8000"
     command: ["python", "src/api.py"]
     restart: on-failure
+    networks:
+      - kafka-network
 
   db-consumer:
     build: .
@@ -110,6 +106,8 @@ services:
       - VAULT_TOKEN=root
     command: ["python", "src/db_consumer.py"]
     restart: on-failure
+    networks:
+      - kafka-network
 
 volumes:
   postgres-data:
